# Dat-Engine

./: vcpkg.json
dat-engine/gpu/vulkan/source/: vulkan-gpu.cpp
dat-engine/source/: dat-engine.cpp
first-party/: CMakeLists.txt
first-party/asset-io/include/dat-mesh/: reader.h  writer.h
first-party/asset-processing/: CMakeLists.txt
first-party/asset-processing/include/: base-asset-processor.h  shader-processor.h
first-party/asset-processing/source/: shader-processor.cpp
tools/: CMakeLists.txt
tools/asset-processor/: CMakeLists.txt
